# mike-t-4b46-mct-official-blog

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md  package-lock.json  package.json  playwright.config.js
migrations/: 20260609160300_bootstrap.sql  20260609161900_posts_categories.sql  20260609162100_media.sql  20260609162300_newsletter_subscribers.sql  20260609162500_seed_default_categories.sql
public/: admin-posts.js  admin-subscribers.js  homepage.js  media-picker.js  post-editor.js
scripts/: build-release.sh  run-release.sh
src/: admin_posts.rs  admin_subscribers.rs  app.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  post_functions.rs  public_posts.rs  storage.rs  uploads.rs
src/repositories/: media.rs  mod.rs  posts.rs  subscribers.rs
style/: main.css  tailwind.css
tests/e2e/: admin-publish.spec.js
